# IS465-TPCH-Q3-Specialised-Preprocessor

./: CMakeLists.txt  README.md  generate_tpch_q3_parquet.py  run.sh
data/: check_parquet_if_valid.py  customer_q3.parquet  orders_q3.parquet
include/: aggregation.h  hash_join.h  scan_parquet.h  topk.h  types.h
src/: aggregation.cpp  hash_join.cpp  main.cpp  scan_parquet.cpp  topk.cpp
